--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container {
-  inline-size: 636px;
+  max-inline-size: 636px;
   margin: auto;
 }
 
@@ -26,11 +26,11 @@ body {
 
 .decorator {
   background: var(--headerGradient);
-  height: 96px;
+  block-size: 96px;
 }
 
 @media screen and (min-width: 768px) {
   .decorator {
-    height: 350px;
+    block-size: 350px;
   }
 }
