--- a/css/section.css
+++ b/css/section.css
@@ -2,6 +2,10 @@ p {
   color: var(--colorShadyLady);
 }
 
+summary p {
+  color: var(--colorWhite);
+}
+
 h1 {
   margin-block-start: 64px;
   margin-block-end: 16px;
@@ -14,8 +18,7 @@ h1 + p {
 }
 
 h2 {
-  margin-block-start: 63px;
-  margin-block-end: 40px;
+  margin-block: 40px;
   font-size: 40px;
 }
 
@@ -35,19 +38,27 @@ pre {
   border-radius: 8px;
   padding: 40px;
   font-family: var(--fontFamilyNunito);
-  font-size: 24px;
+  font-size: 16px;
+  line-height: 24px;
+  overflow: auto;
 }
 
 blockquote {
   background: var(--colorTunder2);
   padding: 24px;
   border-radius: 8px;
-  margin: 80px 0;
+  margin-block-start: 80px;
+  margin-block-end: 63px;
+  margin-inline: 0;
   font-size: 24px;
 }
 
 blockquote span::before {
   content: "-";
+}
+
+blockquote p {
+  color: var(--colorWhite);
 }
 
 .section-content {
@@ -77,6 +88,8 @@ blockquote span::before {
 
 .section-content img {
   margin-block-start: 40px;
+  max-inline-size: 100%;
+  display: block;
 }
 
 .section-content ol li {
@@ -111,6 +124,10 @@ pre {
   border-radius: 8px;
   padding: 16px;
 } */
+
+.variant li {
+  padding: 8px;
+}
 
 @media screen and (min-width: 768px) {
 }
