--- a/css/nemium-a/variables.css
+++ b/css/nemium-a/variables.css
@@ -1,14 +1,20 @@
 :root {
   --fontFamilyRoboto: "Roboto", sans-serif;
-  --fontFamilyNunito: "Nunito", sans-serif;
-
+  /*
   --colorWhite: #fff;
   --colorBlack: #000;
   --colorTunder: #251f24;
   --colorTunder2: #3a3539;
   --colorShadyLady: #a5a3a5;
   --colorDogerBlue: #157efb;
-  --colorGray: rgba(97, 97, 97, 0.2);
+  --colorGray: rgba(97, 97, 97, 0.2); */
+  --colorWhite: #fff;
+  --colorBlack: #000;
+  --colorShark: #212429;
+  --colorMineShaft: #212121;
+  --colorTundora: #424242;
+  --colorDoveGray: #616161;
+  --colorSunglow: #fec62e;
 
   --headerGradient: linear-gradient(96.07deg, #314755 30.63%, #26a0da 102.18%);
 }
