--- a/css/nemium-a/main.css
+++ b/css/nemium-a/main.css
@@ -25,8 +25,8 @@ body {
 }
 
 .decorator {
-  background: url("../../images/light/patron-1.png");
   block-size: 96px;
+  background: linear-gradient(to top, rgba(255, 255, 255, 0.25), transparent), url("../../images/light/patron-1.png");
 }
 
 @media screen and (min-width: 768px) {
