--- a/css/nemium-a/header.css
+++ b/css/nemium-a/header.css
@@ -33,12 +33,12 @@ li {
   color: var(--colorWhite);
 }
 
-summary {
+.list-menu summary {
   list-style-image: url("../../icons/light/expand_arrow-front.svg");
   line-height: 24px;
 }
 
-details[open] summary {
+.list-menu details[open] summary {
   list-style-image: url("../../icons/light/expand_arrow_down.svg");
 }
 
@@ -47,6 +47,27 @@ summary > p {
   display: inline-block;
   vertical-align: middle;
   font-weight: bold;
+}
+
+.variant summary {
+  list-style: none;
+}
+
+.list-menu {
+  display: none;
+}
+
+.summary-title {
+  text-transform: uppercase;
+  font-weight: normal;
+}
+
+details ul {
+  padding-inline-start: 0;
+}
+
+details ol {
+  padding-inline-start: 20px;
 }
 
 @media screen and (min-width: 1366px) {
@@ -77,5 +98,10 @@ summary > p {
   ::-webkit-scrollbar-thumb {
     background: var(--colorTundora);
     border-radius: 10px;
+  }
+
+  .list-menu {
+    display: block;
+    margin-block-start: 107px;
   }
 }
