--- a/css/nemium-a/header.css
+++ b/css/nemium-a/header.css
@@ -15,6 +15,7 @@ header {
   margin-block-end: 16px;
 }
 
+li,
 li a {
   text-decoration: none;
   color: var(--colorShadyLady);
@@ -22,10 +23,6 @@ li a {
 
 li a:hover {
   color: var(--colorBlack);
-}
-
-li {
-  color: var(--colorShadyLady);
 }
 
 .is-active {
