--- a/css/nemium-a/main.css
+++ b/css/nemium-a/main.css
@@ -27,6 +27,7 @@ body {
 .decorator {
   block-size: 96px;
   background: linear-gradient(to top, rgba(255, 255, 255, 0.25), transparent), url("../../images/light/patron-1.png");
+  background-size: 100px;
 }
 
 @media screen and (min-width: 768px) {
